--- a/pidstyle.css
+++ b/pidstyle.css
@@ -30,9 +30,10 @@ h1,h2,h3{
     font-weight: bold;
 }
 .boot_context{
-    text-align: center;
+    width: 80%;
+    word-break:normal;
+    text-align: left;
     margin-left: 10%;
     margin-right: 10%;
-    background:  yellow ;
-    margin-bottom: 20px;
+    background:  yellow;
 }
