--- a/pidstyle.css
+++ b/pidstyle.css
@@ -13,7 +13,7 @@ h1,h2,h3{
 }
 .piebody{
     width: 1024px;
-    background: white;
+    background-image: url("img/silverware.jpg");
     font-size: 18pt;
 
 }
@@ -35,5 +35,13 @@ h1,h2,h3{
     text-align: left;
     margin-left: 10%;
     margin-right: 10%;
-    background:  yellow;
+    background:  #FFFFA8;
+    font-style: italic;
+}
+.title_text{
+    font-weight: bold;
+    color: black;
+}
+.deldettext{
+    text-decoration :line-through;
 }
