--- a/pidstyle.css
+++ b/pidstyle.css
@@ -15,6 +15,8 @@ h1,h2,h3{
     width: 1024px;
     background-image: url("img/silverware.jpg");
     font-size: 18pt;
+    margin-right: 15%;
+    margin-left: 15%;
 
 }
 
