--- a/movie.css
+++ b/movie.css
@@ -51,3 +51,15 @@
     margin-left: 20px;
     vertical-align:middle
 }
+.body-center{
+    width:auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.body_item{
+    border-radius: 25px;
+    border: 2px solid #999999;
+    width: 45%;
+    margin: 10px;
+}
